[package]
name = "orchestrator"
version = "0.4.0"
edition = "2021"
authors = ["Kyugito666"]
description = "GitHub Codespace Full Auto Orchestrator"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
